[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/mini_games/training_capabilities/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/training_capabilities_game/TrainingCapabilitiesGame.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/training_capabilities_game/game-choose.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/training_capabilities_game/background/backgroundColorGrass.png" type="Texture" id=4]
[ext_resource path="res://scenes/mini_games/training_capabilities/Question.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/mini_games/training_capabilities/Answer.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/training_capabilities_game/LevelTimer.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/training_capabilities_game/correct.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/training_capabilities_game/wrong.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/mini_games/training_capabilities/Explosion.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Camera2D.tscn" type="PackedScene" id=11]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.788235, 0.462745, 0.301961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0862745, 0.141176, 0.266667, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 290 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 511 )

[sub_resource type="Curve" id=5]
min_value = -400.0
max_value = 400.0
_data = [ Vector2( 0, 400 ), 0.0, 931.126, 0, 0, Vector2( 0.304598, 53.0598 ), -439.823, -439.823, 0, 0, Vector2( 1, -159.667 ), -46.2973, 0.0, 0, 0 ]

[sub_resource type="Curve" id=6]
max_value = 2.5
_data = [ Vector2( 0, 2.5 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.557797 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.8125, 0.219391, 0.0825195, 1, 0.754573, 0.820312, 0.173035, 1 )

[node name="TrainingCapabilitiesGame" type="Node"]
script = ExtResource( 2 )
Question = ExtResource( 5 )
Answer = ExtResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Background" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="BG0" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 1024.0
margin_bottom = 824.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 125.0
one_shot = true
script = ExtResource( 7 )

[node name="CountdownBar" type="ProgressBar" parent="LevelTimer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 125.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerSpawnPositions" type="Node" parent="."]

[node name="Position3" type="Position2D" parent="AnswerSpawnPositions"]
position = Vector2( 850, 450 )

[node name="Position2" type="Position2D" parent="AnswerSpawnPositions"]
position = Vector2( 160, 450 )

[node name="Position1" type="Position2D" parent="AnswerSpawnPositions"]
position = Vector2( 850, 125 )

[node name="Position0" type="Position2D" parent="AnswerSpawnPositions"]
position = Vector2( 160, 125 )

[node name="Walls" type="Node" parent="."]

[node name="WallO" type="StaticBody2D" parent="Walls"]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallO"]
position = Vector2( -11, 290 )
shape = SubResource( 3 )

[node name="WallE" type="StaticBody2D" parent="Walls"]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallE"]
position = Vector2( 1034, 287 )
shape = SubResource( 3 )

[node name="WallS" type="StaticBody2D" parent="Walls"]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallS"]
position = Vector2( 512, 586 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="WallN" type="StaticBody2D" parent="Walls"]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallN"]
position = Vector2( 513, -10 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="WrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="ExplosionCorrect" parent="." instance=ExtResource( 10 )]
light_mask = 2
z_index = 1
lifetime = 0.4

[node name="ExplosionWrong" parent="." instance=ExtResource( 10 )]
z_index = 1
linear_accel_curve = SubResource( 5 )
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="Camera2D" parent="." instance=ExtResource( 11 )]
current = true
[connection signal="camera_effect" from="." to="Camera2D" method="_on_TrainingCapabilitiesGame_camera_effect"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="QuestionTimer" to="." method="_on_QuestionTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
